Migrate to Next.js App Router with marketplace and Supabase login

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,12 @@ dist-store
 dist-ssr
 *.local
 
+.next
+out
+.vercel
+.env
+.env.*
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
