--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "next dev",
+    "dev:store": "next dev",
+    "dev:landing": "next dev",
     "build": "next build",
+    "build:store": "next build",
+    "build:landing": "next build",
     "start": "next start"
   },
   "dependencies": {
