--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "postcss": "^8.4.38",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "swiper": "^11.2.10",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
